[package]
name = "blue_engine_utilities"
version = "0.1.2"
edition = "2021"
authors = ["Elham Aryanpur <elhamaryanpur5@gmail.com>"]
description = "Utilities for Blue Engine"
repository = "https://github.com/AryanpurTech/BlueEngineUtilities"
keywords = ["gamedev", "utility", "3D", "2D", "animation"]
categories = ["game-development", "graphics", "rendering"]
license = "Apache-2.0"

[features]
default = ["animation", "gltf"]
animation = ["dep:keyframe_derive", "dep:keyframe"]
gltf = ["dep:gltf"]

[dependencies]
blue_engine = { version = "^0.4.23" }
#blue_engine = { path = "../Blue Engine" } 
anyhow = "1.0"

# Animation
keyframe = { version = "1.1.1", optional = true }
keyframe_derive = { version = "1.0.0", optional = true }

# model loading
gltf = { version = "1.0", optional = true }


# Animation examples
[[example]]
name = "animation"
path = "examples/animation.rs"

# Camera examples
[[example]]
name = "fly_camera"
path = "examples/flycamera.rs"

# Light examples
[[example]]
name = "basic_light"
path = "examples/basic_light.rs"